# polymarket-pandas

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STABILITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  temp.csv  temp4.py
.github/: PULL_REQUEST_TEMPLATE.md  changelog-seen.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: changelog-watch.yml  ci.yml  docs.yml  release.yml
api/async/: index.html
api/bridge/: index.html
api/ctf/: index.html
api/data/: index.html
api/exceptions/: index.html
api/markets/: index.html
api/parsers/: index.html
api/relayer/: index.html
api/rewards/: index.html
api/schemas/: index.html
api/trading/: index.html
api/websocket/: index.html
api/xtracker/: index.html
binder/: apt.txt  requirements.txt
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md
docs/api/: async.md  bridge.md  ctf.md  data.md  exceptions.md  markets.md  parsers.md  relayer.md  rewards.md  schemas.md  trading.md  websocket.md  xtracker.md
docs/guides/: configuration.md  dataframes.md  explorer.md  mcp-server.md  order-building.md  pagination.md
examples/: accounting_snapshot.py  async_trades_orders.py  btc_5min.py  btc_5min_trade_merge.py  examples.py  market_structures.py  merge_positions.py  post_only_buy.py  pyclobclient.py  quickstart.py  redeem_positions.py  rewards_overview.py  rtds_ws.py  uma_dispute_bot.py  user_ws.py  xtracker_overview.py
explorer/: __init__.py  app.py  home.py
explorer/pages/: 01_markets.py  02_events.py  03_series.py  04_orderbook.py  04_tags.py  05_orderbook.py  05_prices.py  06_positions.py  06_prices.py  07_positions.py  07_trades.py  08_leaderboard.py  08_trades.py  09_leaderboard.py  09_rewards.py  10_bridge.py  10_rewards.py
getting-started/: index.html
guides/configuration/: index.html
guides/dataframes/: index.html
guides/explorer/: index.html
guides/mcp-server/: index.html
guides/order-building/: index.html
guides/pagination/: index.html
notebooks/: 01_getting_started.ipynb  02_market_analysis.ipynb  03_portfolio_tracking.ipynb  04_rewards_overview.ipynb  05_xtracker.ipynb
polymarket_pandas/: __init__.py  async_client.py  async_ws.py  client.py  exceptions.py  mcp_server.py  order_schema.py  parsers.py  polymarket_pandas.py  schemas.py  types.py  utils.py  ws.py
polymarket_pandas/mixins/: __init__.py  _bridge.py  _clob_private.py  _clob_public.py  _ctf.py  _data.py  _gamma.py  _relayer.py  _rewards.py  _rfq.py  _uma.py  _xtracker.py
scripts/: watch_changelog.py
search/: search_index.json
tests/: conftest.py  temp.py  temp2.py  temp3.py  test_async_unit.py  test_integration.py  test_markets.py  test_parsers.py  test_schemas_hypothesis.py  test_unit.py
tests/fixtures/: _discover_xtracker.py  xtracker_metrics.json  xtracker_tracking.json  xtracker_trackings.json  xtracker_user.json  xtracker_user_posts.json  xtracker_user_trackings.json  xtracker_users.json
