[project]
name = "polymarket-pandas"
version = "0.1.0"
description = "Pandas API client to Polymarket"
authors = [
    {name = "Sigma Quantiphi", email = "contact@sqphi.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["polymarket", "prediction-markets", "trading", "pandas", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "eth-account>=0.13.7",
    "httpx>=0.28.1",
    "orjson>=3.11.0",
    "pandas[computation,output-formatting,performance]>=2.2.3",
    "pandera>=0.22.1",
    "websocket-client>=1.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
ctf = [
    "web3>=7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
]

[project.urls]
homepage = "https://github.com/sigma-quantiphi/polymarket-pandas"
repository = "https://github.com/sigma-quantiphi/polymarket-pandas"
documentation = "https://github.com/sigma-quantiphi/polymarket-pandas"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polymarket_pandas*"]

[tool.setuptools.package-data]
polymarket_pandas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore:Auto-derive of CLOB API key failed:UserWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
