[project]
name = "polymarket-pandas"
version = "0.6.21"
description = "Pandas API client to Polymarket"
authors = [
    {name = "Sigma Quantiphi", email = "contact@sqphi.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["polymarket", "prediction-markets", "trading", "pandas", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Pandas",
    "Operating System :: OS Independent",
]

dependencies = [
    "cachetools>=5.3",
    "eth-account>=0.13.7",
    "httpx>=0.28.1",
    "orjson>=3.11.0",
    "pandas[computation,output-formatting,performance]>=2.2.3",
    "pandera>=0.22.1",
    "websocket-client>=1.8.0",
    "websockets>=13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
ctf = [
    "web3>=7.0",
]
explorer = [
    "streamlit>=1.30",
    "plotly>=5.0",
]
mcp = [
    "fastmcp>=2.0",
    "tabulate>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "pytest-asyncio>=0.24",
    "types-cachetools>=5.3",
]

[project.scripts]
polymarket-explore = "explorer.app:main"
polymarket-mcp = "polymarket_pandas.mcp_server:main"

[project.urls]
homepage = "https://github.com/sigma-quantiphi/polymarket-pandas"
repository = "https://github.com/sigma-quantiphi/polymarket-pandas"
documentation = "https://sigma-quantiphi.github.io/polymarket-pandas/"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polymarket_pandas*", "explorer*"]

[tool.setuptools.package-data]
polymarket_pandas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore:Auto-derive of CLOB API key failed:UserWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]  # imports after load_dotenv() is intentional
"explorer/pages/*.py" = ["E402"]  # lazy imports after st.stop() guards

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "polymarket_pandas.mixins.*"
disable_error_code = ["attr-defined", "arg-type", "return-value"]

[[tool.mypy.overrides]]
module = "polymarket_pandas.utils"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "polymarket_pandas.client"
disable_error_code = ["arg-type", "assignment", "return-value"]

[[tool.mypy.overrides]]
module = "polymarket_pandas.ws"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "polymarket_pandas.async_ws"
disable_error_code = ["union-attr", "arg-type"]
